--- a/locals-community.html
+++ b/locals-community.html
@@ -28,23 +28,12 @@ Example:
       :host {
         display: block;
         box-sizing: border-box;
+        color: black;
       }
   
-      .author img {
-        display: block;
-        float: left;
-        margin-right: 5px;
-        max-height: 100px;
-        max-width: 100px;
-      }
+      
     </style>
-    <h1>&lt;locals-community&gt;</h1>
-    <content></content>
-    <p class="author">
-      <img src="{{author.image}}">
-      Cheers,<br/>
-      <span class="name">{{author.name}}</span>
-    </p>
+    <h1>COMMUNITY</h1>
   </template>
 
 </dom-module>
